# segSHAPE

./: README.md  pyproject.toml
datasets/: README.md  reproduction.ipynb
datasets/bsub_16S/: mod_rate_gmm_q0.005.csv  mod_rate_if_contam0.005.csv  pos_kmer_table.csv  reference.fa  rnafold_gmm.out  rnafold_if.out  structure_gt.txt
datasets/miR17-92/: mod_rate_gmm_q0.005.csv  mod_rate_if_contam0.005.csv  pos_kmer_table.csv  reference.fa  rnafold_gmm.out  rnafold_if.out  structure_gt.txt
datasets/smPC_002pool_wt/: TETRA_mod_rate_gmm_q0.005.csv  TETRA_mod_rate_if_contam0.005.csv  TETRA_pos_kmer_table.csv  TETRA_rnafold_gmm.out  TETRA_rnafold_if.out
datasets/smPC_004pool_wt/: TETRA_mod_rate_gmm_q0.02.csv  TETRA_mod_rate_if_contam0.02.csv  TETRA_pos_kmer_table.csv  TETRA_rnafold_gmm.out  TETRA_rnafold_if.out  TETRA_structure_gt.txt  reference.fa
datasets/tetra/: mod_rate_gmm_q0.005.csv  mod_rate_if_contam0.005.csv  pos_kmer_table.csv  reference.fa  rnafold_gmm.out  rnafold_if.out
docs/: plot.md  tutorial.md
src/segshape/: __init__.py  cli.py
src/segshape/align/: anchored.py  cli.py
src/segshape/data/: __init__.py
src/segshape/data/kmer_models/: README.md  build_levels_with_stdv.py  ont_rna002_5mer_levels_v1_with_stdv_5_to_3.txt  ont_rna002_template_median69pA_5_to_3.model
src/segshape/data/rnafold_params/: README.md
src/segshape/evaluate/: build_summary.py  cli.py  filter_ll.py  fold_out.py  fold_out_all.py  pipeline.py  summarize.py
src/segshape/fold/: __init__.py  cli.py  rnafold.py
src/segshape/io/: cli.py  dorado_mv.py  pod5_index.py  signal_reader.py
src/segshape/plot/: alignment_path.py  cli.py  dorado_mv.py  segment_qc.py  trajectory.py
src/segshape/reactivity/: calling.py  cli.py
src/segshape/segment/: cli.py  events.py
tests/: make_plot_example.py  test_package.py
tests/data/plot_example/: read_ids.txt
tests/data/plot_example/datasets/miR17-92/control/1_raw_signal/: pod5.index
tests/data/plot_example/datasets/miR17-92/control/1_raw_signal/pod5/: plot_example.pod5
tests/data/plot_example/datasets/miR17-92/control/2_base_called/dorado-0.9.6/: dorado.sorted.bam  dorado.sorted.bam.bai
tests/data/plot_example/datasets/miR17-92/control/3_alignment/: dorado.extract_mv.csv  subevents.norm.parquet
tests/data/plot_example/datasets/miR17-92/control/3_alignment/rna002_norm_de50_dk15_bc0.0_sp50_lwnone_sm1.0_k50.0/: alignment.csv  pos_kmer_table.csv  scale.csv
